--- a/master.css
+++ b/master.css
@@ -1,12 +1,21 @@
 #infoPerfil{
     padding: 3%;
 }
-.card-img-overlay>h4{
+.perfil>img{
+    position: relative;
+    z-index: 1;
+}
+.perfil>h4{
     position: absolute;
-    left: 2%;;
-    top: 48%;
+    z-index: 2;
     color: whitesmoke;
+    top: 13%;
+    left: 3%;
 }
 p>img{
     margin-bottom:4px;
+}
+p{
+    padding: 7px;
+    margin-bottom: 0;
 }
