falta responsive y foto contacto

--- a/css/_notas.scss
+++ b/css/_notas.scss
@@ -50,7 +50,7 @@
         }
 
         .container input:checked ~ .checkmark {
-            background-color: rgb(46, 139, 116);
+            background-color: #01526F;
         }
 
         .checkmark:after {
