--- a/css/_estilos.scss
+++ b/css/_estilos.scss
@@ -4,7 +4,10 @@
 @import 'app';
 @import 'notas';
 @import 'notasmin';
-//@import 'secreto';
+@import 'juegos';
+@import 'juegosmin';
+//@import 'herramientas';
+//@import 'herramientasmin';
 
 html, body {
     height: 100vh;
@@ -29,5 +32,14 @@ html, body {
         text-align: right;
         grid-row: 1 / 2;
         grid-column: 2 / 3;
+    }
+
+    a {
+        color: #01526F;
+        text-decoration: none;
+    }
+
+    a:hover {
+        size: 110%;
     }
 }
