--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,8 @@
   margin-top: 122px;
   background: #01526F;
   border-radius: 1%;
-  color: white; }
+  color: white;
+  text-align: center; }
 
 #bar.hide {
   display: none; }
@@ -94,7 +95,7 @@
     #notas #info2 .container:hover input ~ .checkmark {
       background-color: #ccc; }
     #notas #info2 .container input:checked ~ .checkmark {
-      background-color: #2e8b74; }
+      background-color: #01526F; }
     #notas #info2 .checkmark:after {
       content: "";
       position: absolute;
@@ -120,7 +121,38 @@
   margin-top: 122px;
   background: #01526F;
   border-radius: 1%;
-  color: white; }
+  color: white;
+  text-align: center; }
+
+#juegos {
+  grid-column: 3 / 7;
+  grid-row: 2 / 4;
+  background: seashell;
+  border: #01526F solid 2px;
+  display: grid;
+  grid-template: 7% 1fr/repeat(2, 1fr);
+  border-radius: 1%;
+  align-self: center; }
+  #juegos #menu3 {
+    grid-column: 1 /3;
+    display: grid;
+    background: #01526F;
+    color: white; }
+  #juegos #info3 {
+    grid-column: 1 / 3;
+    text-align: center;
+    padding: 20px; }
+
+#juegos.hide {
+  display: none; }
+
+#bar3 {
+  grid-row: 4 / 5;
+  margin-top: 122px;
+  background: #01526F;
+  border-radius: 1%;
+  color: white;
+  text-align: center; }
 
 html, body {
   height: 100vh;
@@ -138,5 +170,10 @@ html, body {
     text-align: right;
     grid-row: 1 / 2;
     grid-column: 2 / 3; }
+  html a, body a {
+    color: #01526F;
+    text-decoration: none; }
+  html a:hover, body a:hover {
+    size: 110%; }
 
 /*# sourceMappingURL=main.css.map */
