--- a/css/_contacto.scss
+++ b/css/_contacto.scss
@@ -15,6 +15,18 @@
         color: white;
     }
     
+    #foto {
+        grid-row: 2 / 3;
+        grid-column: 1 / 2;
+        align-self: center;
+        padding: 2%;
+
+        img {
+            width: 85%;
+            margin-left: 15px;
+        }
+    }
+
     #info {
         grid-row: 2 / 3;
         grid-column: 2 /3;
